WP2Static UPDATE wp-content/uploads/elementor/css/post-54.css

--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -1,6 +1,6 @@
 .elementor-54 .elementor-element.elementor-element-269eabe > .elementor-container {max-width: 1169px;}
 .elementor-54 .elementor-element.elementor-element-269eabe {z-index: 5;}
-.elementor-54 .elementor-element.elementor-element-9113d0f:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-9113d0f > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://sanket24m.github.io/Apple/wp-content/uploads/2020/05/above-black-band.png");background-repeat: no-repeat;background-size: 55% auto;}
+.elementor-54 .elementor-element.elementor-element-9113d0f:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-9113d0f > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-image: url("https://Sanket24M.github.com/Apple/wp-content/uploads/2020/05/above-black-band.png");background-repeat: no-repeat;background-size: 55% auto;}
 .elementor-54 .elementor-element.elementor-element-9113d0f > .elementor-element-populated {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;margin: 0px 0px 0px 0px;}
 .elementor-54 .elementor-element.elementor-element-9113d0f > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-54 .elementor-element.elementor-element-9113d0f {z-index: 5;}
