--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -46,6 +46,26 @@
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-divider-separator {width: 100%;}
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-divider {padding-top: 15px;padding-bottom: 15px;}
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-dd423e6:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
+.elementor-54 .elementor-element.elementor-element-dd423e6:hover > .elementor-element-populated {background-color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
+.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon-wrapper {text-align: center;}
+.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-stacked .elementor-icon {background-color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-default .elementor-icon {color: #61ce70;border-color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-default .elementor-icon svg {fill: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-ee5492d.elementor-widget-heading .elementor-heading-title {color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-7e79b21:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
+.elementor-54 .elementor-element.elementor-element-7e79b21:hover > .elementor-element-populated {background-color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
+.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon-wrapper {text-align: center;}
+.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-stacked .elementor-icon {background-color: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-default .elementor-icon {color: #f3a439;border-color: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-default .elementor-icon svg {fill: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon i, .elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-7aac866.elementor-widget-heading .elementor-heading-title {color: #f3a439;}
 body.elementor-page-54:not(.elementor-motion-effects-element-type-background), body.elementor-page-54 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #fff;}
 @media (max-width:767px) {.elementor-54 .elementor-element.elementor-element-97cb4e4 > .elementor-widget-container {margin: -12px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-460b028 .elementor-heading-title {font-size: 11px;}
@@ -87,4 +107,18 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-divider {padding-top: 14px;padding-bottom: 14px;}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 {--divider-icon-size: 30px;--divider-element-spacing: 28px;}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
-	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}}
+	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;}
+	.elementor-54 .elementor-element.elementor-element-dd423e6 {width: 50%;}
+	.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
+	.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon {font-size: 32px;}
+	.elementor-54 .elementor-element.elementor-element-3af03f3 > .elementor-widget-container {margin: -9px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-ee5492d {text-align: center;}
+	.elementor-54 .elementor-element.elementor-element-ee5492d > .elementor-widget-container {margin: -24px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-7e79b21 {width: 50%;}
+	.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
+	.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon {font-size: 32px;}
+	.elementor-54 .elementor-element.elementor-element-3c3ab1a > .elementor-widget-container {margin: -9px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-7aac866 {text-align: center;}
+	.elementor-54 .elementor-element.elementor-element-7aac866 .elementor-heading-title {letter-spacing: 2.1px;}
+	.elementor-54 .elementor-element.elementor-element-7aac866 > .elementor-widget-container {margin: -28px -15px 0px 0px;}}
