--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -108,7 +108,7 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 {--divider-icon-size: 30px;--divider-element-spacing: 28px;}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;}
+	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;padding: 0px 0px 58px 0px;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 {width: 50%;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
 	.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon {font-size: 32px;}
