--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -46,6 +46,9 @@
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-divider-separator {width: 100%;}
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-divider {padding-top: 15px;padding-bottom: 15px;}
 .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-5499022:not(.elementor-motion-effects-element-type-background), .elementor-54 .elementor-element.elementor-element-5499022 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-5499022 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
+.elementor-54 .elementor-element.elementor-element-5499022 > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-54 .elementor-element.elementor-element-dd423e6:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
 .elementor-54 .elementor-element.elementor-element-dd423e6:hover > .elementor-element-populated {background-color: #7a7a7a;}
 .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
@@ -108,6 +111,7 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 {--divider-icon-size: 30px;--divider-element-spacing: 28px;}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-5499022 {margin-top: 0px;margin-bottom: 0px;padding: 137px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;padding: 0px 0px 58px 0px;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 {width: 50%;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
