--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -49,6 +49,14 @@
 .elementor-54 .elementor-element.elementor-element-5499022:not(.elementor-motion-effects-element-type-background), .elementor-54 .elementor-element.elementor-element-5499022 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #7a7a7a;}
 .elementor-54 .elementor-element.elementor-element-5499022 {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
 .elementor-54 .elementor-element.elementor-element-5499022 > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-54 .elementor-element.elementor-element-49f421f {z-index: 3;}
+.elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon-wrapper {text-align: center;}
+.elementor-54 .elementor-element.elementor-element-72e44de.elementor-view-stacked .elementor-icon {background-color: #fff;}
+.elementor-54 .elementor-element.elementor-element-72e44de.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-72e44de.elementor-view-default .elementor-icon {color: #fff;border-color: #fff;}
+.elementor-54 .elementor-element.elementor-element-72e44de.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-72e44de.elementor-view-default .elementor-icon svg {fill: #fff;}
+.elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon i, .elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-21e2780 {z-index: 4;}
+.elementor-54 .elementor-element.elementor-element-1e84a72.elementor-widget-heading .elementor-heading-title {color: #fff;}
 .elementor-54 .elementor-element.elementor-element-dd423e6:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
 .elementor-54 .elementor-element.elementor-element-dd423e6:hover > .elementor-element-populated {background-color: #7a7a7a;}
 .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
@@ -112,6 +120,12 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-5499022 {margin-top: 0px;margin-bottom: 0px;padding: 137px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-49f421f {width: 30%;}
+	.elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon {font-size: 14px;}
+	.elementor-54 .elementor-element.elementor-element-21e2780 {width: 60%;}
+	.elementor-54 .elementor-element.elementor-element-21e2780 > .elementor-element-populated {margin: 0px 0px 0px -47px;}
+	.elementor-54 .elementor-element.elementor-element-1e84a72 .elementor-heading-title {font-size: 16px;}
+	.elementor-54 .elementor-element.elementor-element-1e84a72 > .elementor-widget-container {margin: 3px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;padding: 0px 0px 58px 0px;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 {width: 50%;}
 	.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
