WP2Static UPDATE wp-content/uploads/elementor/css/post-54.css

--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -18,7 +18,13 @@
 .elementor-54 .elementor-element.elementor-element-fcb7849 {z-index: 4;}
 .elementor-54 .elementor-element.elementor-element-1f46321 .elementor-spacer-inner {height: 172px;}
 .elementor-54 .elementor-element.elementor-element-1f46321 > .elementor-widget-container {margin: 0px -79px 0px 0px;}
-.elementor-54 .elementor-element.elementor-element-2c7014c {z-index: 6;}
+.elementor-54 .elementor-element.elementor-element-2c7014c {z-index: 5;}
+.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-menu-toggle {margin-left: auto;font-size: 36px;border-width: 1px;border-radius: 10px;}
+.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--main .elementor-item {color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--dropdown {background-color: #a75252;}
+.elementor-54 .elementor-element.elementor-element-addddc2 div.elementor-menu-toggle {color: #54595f;}
+.elementor-54 .elementor-element.elementor-element-5c615ae {transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;z-index: 4;}
+.elementor-54 .elementor-element.elementor-element-5c615ae > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
 .elementor-54 .elementor-element.elementor-element-fa3dc2b.elementor-widget-heading .elementor-heading-title {color: #7a7a7a;}
 .elementor-54 .elementor-element.elementor-element-86679ba {z-index: 3;}
 .elementor-54 .elementor-element.elementor-element-72e6073 {--divider-border-style: double;--divider-border-color: #7a7a7a;--divider-border-width: 4.4px;z-index: 4;}
@@ -57,26 +63,26 @@
 .elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon i, .elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon svg {transform: rotate(0deg);}
 .elementor-54 .elementor-element.elementor-element-21e2780 {z-index: 4;}
 .elementor-54 .elementor-element.elementor-element-1e84a72.elementor-widget-heading .elementor-heading-title {color: #fff;}
-.elementor-54 .elementor-element.elementor-element-dd423e6:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
-.elementor-54 .elementor-element.elementor-element-dd423e6:hover > .elementor-element-populated {background-color: #7a7a7a;}
-.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
-.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
-.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon-wrapper {text-align: center;}
-.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-stacked .elementor-icon {background-color: #61ce70;}
-.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-default .elementor-icon {color: #61ce70;border-color: #61ce70;}
-.elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3af03f3.elementor-view-default .elementor-icon svg {fill: #61ce70;}
-.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon svg {transform: rotate(0deg);}
-.elementor-54 .elementor-element.elementor-element-ee5492d.elementor-widget-heading .elementor-heading-title {color: #61ce70;}
-.elementor-54 .elementor-element.elementor-element-7e79b21:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
-.elementor-54 .elementor-element.elementor-element-7e79b21:hover > .elementor-element-populated {background-color: #7a7a7a;}
-.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
-.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
-.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon-wrapper {text-align: center;}
-.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-stacked .elementor-icon {background-color: #f3a439;}
-.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-default .elementor-icon {color: #f3a439;border-color: #f3a439;}
-.elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-3c3ab1a.elementor-view-default .elementor-icon svg {fill: #f3a439;}
-.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon i, .elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon svg {transform: rotate(0deg);}
-.elementor-54 .elementor-element.elementor-element-7aac866.elementor-widget-heading .elementor-heading-title {color: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-af2ff65:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-af2ff65 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
+.elementor-54 .elementor-element.elementor-element-af2ff65:hover > .elementor-element-populated {background-color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-af2ff65 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
+.elementor-54 .elementor-element.elementor-element-af2ff65 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-54 .elementor-element.elementor-element-abc7e0e .elementor-icon-wrapper {text-align: center;}
+.elementor-54 .elementor-element.elementor-element-abc7e0e.elementor-view-stacked .elementor-icon {background-color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-abc7e0e.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-abc7e0e.elementor-view-default .elementor-icon {color: #61ce70;border-color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-abc7e0e.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-abc7e0e.elementor-view-default .elementor-icon svg {fill: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-abc7e0e .elementor-icon i, .elementor-54 .elementor-element.elementor-element-abc7e0e .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-5fca42b.elementor-widget-heading .elementor-heading-title {color: #61ce70;}
+.elementor-54 .elementor-element.elementor-element-770be90:not(.elementor-motion-effects-element-type-background) > .elementor-element-populated, .elementor-54 .elementor-element.elementor-element-770be90 > .elementor-column-wrap > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #54595f;}
+.elementor-54 .elementor-element.elementor-element-770be90:hover > .elementor-element-populated {background-color: #7a7a7a;}
+.elementor-54 .elementor-element.elementor-element-770be90 > .elementor-element-populated {border-style: groove;transition: background .3s,border .3s,border-radius .3s,box-shadow .3s;}
+.elementor-54 .elementor-element.elementor-element-770be90 > .elementor-element-populated > .elementor-background-overlay {transition: background .3s,border-radius .3s,opacity .3s;}
+.elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon-wrapper {text-align: center;}
+.elementor-54 .elementor-element.elementor-element-78a416a.elementor-view-stacked .elementor-icon {background-color: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-78a416a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-78a416a.elementor-view-default .elementor-icon {color: #f3a439;border-color: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-78a416a.elementor-view-framed .elementor-icon, .elementor-54 .elementor-element.elementor-element-78a416a.elementor-view-default .elementor-icon svg {fill: #f3a439;}
+.elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon i, .elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon svg {transform: rotate(0deg);}
+.elementor-54 .elementor-element.elementor-element-a557f95.elementor-widget-heading .elementor-heading-title {color: #f3a439;}
 body.elementor-page-54:not(.elementor-motion-effects-element-type-background), body.elementor-page-54 > .elementor-motion-effects-container > .elementor-motion-effects-layer {background-color: #fff;}
 @media (max-width:767px) {.elementor-54 .elementor-element.elementor-element-97cb4e4 > .elementor-widget-container {margin: -12px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-460b028 .elementor-heading-title {font-size: 11px;}
@@ -85,6 +91,20 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-fcb7849 > .elementor-element-populated {margin: 0px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-1f46321 > .elementor-widget-container {margin: -37px 0px 0px 0px;padding: 0px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-2c7014c {margin-top: -103px;margin-bottom: 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu .elementor-item {font-size: 22px;line-height: .8em;letter-spacing: 3.9px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-framed .elementor-item:before {border-width: 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-framed.e--animation-draw .elementor-item:before {border-width: 0 0 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-framed.e--animation-draw .elementor-item:after {border-width: 0px 0px 0 0;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-framed.e--animation-corners .elementor-item:before {border-width: 0px 0 0 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-framed.e--animation-corners .elementor-item:after {border-width: 0 0px 0px 0;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-underline .elementor-item:after, .elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-overline .elementor-item:before, .elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-double-line .elementor-item:before, .elementor-54 .elementor-element.elementor-element-addddc2 .e--pointer-double-line .elementor-item:after {height: 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--main .elementor-item {padding-left: 0px;padding-right: 0px;}
+	body:not(.rtl) .elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--layout-horizontal .elementor-nav-menu > li:not(:last-child) {margin-right: 0px;}
+	body.rtl .elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--layout-horizontal .elementor-nav-menu > li:not(:last-child) {margin-left: 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--main:not(.elementor-nav-menu--layout-horizontal) .elementor-nav-menu > li:not(:last-child) {margin-bottom: 0px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--dropdown a {padding-left: 0px;padding-right: 0px;padding-top: 25px;padding-bottom: 25px;}
+	.elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu--main > .elementor-nav-menu > li > .elementor-nav-menu--dropdown, .elementor-54 .elementor-element.elementor-element-addddc2 .elementor-nav-menu__container.elementor-nav-menu--dropdown {margin-top: 16px !important;}
+	.elementor-54 .elementor-element.elementor-element-5c615ae {margin-top: -116px;margin-bottom: 0px;}
 	.elementor-54 .elementor-element.elementor-element-fa3dc2b {text-align: center;}
 	.elementor-54 .elementor-element.elementor-element-72e6073 .elementor-divider-separator {width: 100%;}
 	.elementor-54 .elementor-element.elementor-element-72e6073 .elementor-divider {padding-top: 14px;padding-bottom: 14px;}
@@ -119,24 +139,24 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 {--divider-icon-size: 30px;--divider-element-spacing: 28px;}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon i, .elementor-54 .elementor-element.elementor-element-ac6ce98 .elementor-icon svg {transform: rotate(0deg);}
 	.elementor-54 .elementor-element.elementor-element-ac6ce98 > .elementor-widget-container {margin: -22px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-5499022 {margin-top: 0px;margin-bottom: 0px;padding: 137px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-5499022 {margin-top: 0px;margin-bottom: -28px;padding: 137px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-49f421f {width: 30%;}
 	.elementor-54 .elementor-element.elementor-element-72e44de .elementor-icon {font-size: 14px;}
 	.elementor-54 .elementor-element.elementor-element-21e2780 {width: 60%;}
 	.elementor-54 .elementor-element.elementor-element-21e2780 > .elementor-element-populated {margin: 0px 0px 0px -47px;}
 	.elementor-54 .elementor-element.elementor-element-1e84a72 .elementor-heading-title {font-size: 16px;}
 	.elementor-54 .elementor-element.elementor-element-1e84a72 > .elementor-widget-container {margin: 3px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-a92386b {margin-top: 0px;margin-bottom: 0px;padding: 0px 0px 58px 0px;}
-	.elementor-54 .elementor-element.elementor-element-dd423e6 {width: 50%;}
-	.elementor-54 .elementor-element.elementor-element-dd423e6 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
-	.elementor-54 .elementor-element.elementor-element-3af03f3 .elementor-icon {font-size: 32px;}
-	.elementor-54 .elementor-element.elementor-element-3af03f3 > .elementor-widget-container {margin: -9px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-ee5492d {text-align: center;}
-	.elementor-54 .elementor-element.elementor-element-ee5492d > .elementor-widget-container {margin: -24px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-7e79b21 {width: 50%;}
-	.elementor-54 .elementor-element.elementor-element-7e79b21 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
-	.elementor-54 .elementor-element.elementor-element-3c3ab1a .elementor-icon {font-size: 32px;}
-	.elementor-54 .elementor-element.elementor-element-3c3ab1a > .elementor-widget-container {margin: -9px 0px 0px 0px;}
-	.elementor-54 .elementor-element.elementor-element-7aac866 {text-align: center;}
-	.elementor-54 .elementor-element.elementor-element-7aac866 .elementor-heading-title {letter-spacing: 2.1px;}
-	.elementor-54 .elementor-element.elementor-element-7aac866 > .elementor-widget-container {margin: -28px -15px 0px 0px;}}
+	.elementor-54 .elementor-element.elementor-element-77b1c5e {margin-top: 0px;margin-bottom: 0px;padding: 0px 0px 58px 0px;}
+	.elementor-54 .elementor-element.elementor-element-af2ff65 {width: 50%;}
+	.elementor-54 .elementor-element.elementor-element-af2ff65 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
+	.elementor-54 .elementor-element.elementor-element-abc7e0e .elementor-icon {font-size: 32px;}
+	.elementor-54 .elementor-element.elementor-element-abc7e0e > .elementor-widget-container {margin: -9px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-5fca42b {text-align: center;}
+	.elementor-54 .elementor-element.elementor-element-5fca42b > .elementor-widget-container {margin: -24px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-770be90 {width: 50%;}
+	.elementor-54 .elementor-element.elementor-element-770be90 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
+	.elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon {font-size: 32px;}
+	.elementor-54 .elementor-element.elementor-element-78a416a > .elementor-widget-container {margin: -9px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-a557f95 {text-align: center;}
+	.elementor-54 .elementor-element.elementor-element-a557f95 .elementor-heading-title {letter-spacing: 2.1px;}
+	.elementor-54 .elementor-element.elementor-element-a557f95 > .elementor-widget-container {margin: -28px -15px 0px 0px;}}
