WP2Static UPDATE wp-content/uploads/elementor/css/post-54.css

--- a/wp-content/uploads/elementor/css/post-54.css
+++ b/wp-content/uploads/elementor/css/post-54.css
@@ -155,8 +155,8 @@ body.elementor-page-54:not(.elementor-motion-effects-element-type-background), b
 	.elementor-54 .elementor-element.elementor-element-5fca42b > .elementor-widget-container {margin: -24px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-770be90 {width: 50%;}
 	.elementor-54 .elementor-element.elementor-element-770be90 > .elementor-element-populated {margin: 29px 0px -70px 0px;}
-	.elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon {font-size: 32px;}
-	.elementor-54 .elementor-element.elementor-element-78a416a > .elementor-widget-container {margin: -9px 0px 0px 0px;}
+	.elementor-54 .elementor-element.elementor-element-78a416a .elementor-icon {font-size: 24px;}
+	.elementor-54 .elementor-element.elementor-element-78a416a > .elementor-widget-container {margin: -6px 0px 0px 0px;}
 	.elementor-54 .elementor-element.elementor-element-a557f95 {text-align: center;}
-	.elementor-54 .elementor-element.elementor-element-a557f95 .elementor-heading-title {letter-spacing: 2.1px;}
-	.elementor-54 .elementor-element.elementor-element-a557f95 > .elementor-widget-container {margin: -28px -15px 0px 0px;}}
+	.elementor-54 .elementor-element.elementor-element-a557f95 .elementor-heading-title {line-height: 1em;letter-spacing: .6px;}
+	.elementor-54 .elementor-element.elementor-element-a557f95 > .elementor-widget-container {margin: -19px 0px 0px 0px;}}
